// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddReview renders correctly renders blocked form correctly 1`] = `
<div
  className="add-review"
>
  <form
    action="#"
    className="add-review__form"
    onSubmit={[Function]}
  >
    <div
      className="rating"
    >
      <div
        className="rating__stars"
      >
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-1"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <label
          className="rating__label"
          htmlFor="star-1"
        >
          Rating 1 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-2"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <label
          className="rating__label"
          htmlFor="star-2"
        >
          Rating 2 stars
        </label>
        <input
          checked={true}
          className="rating__input"
          disabled={false}
          id="star-3"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <label
          className="rating__label"
          htmlFor="star-3"
        >
          Rating 3 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-4"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="4"
        />
        <label
          className="rating__label"
          htmlFor="star-4"
        >
          Rating 4 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-5"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="5"
        />
        <label
          className="rating__label"
          htmlFor="star-5"
        >
          Rating 5 stars
        </label>
      </div>
    </div>
    <div
      className="add-review__text"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255, 0.3)",
        }
      }
    >
      <textarea
        className="add-review__textarea"
        disabled={false}
        id="review-text"
        name="review-text"
        onChange={[Function]}
        placeholder="Please write in the range from 50 to 400 characters"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor nisl eros, hendrerit auctor quam lobortis ut. Praesent magna odio, iaculis et mauris vel, tincidunt vulputate magna."
      />
      <div
        className="add-review__submit"
      >
        <button
          className="add-review__btn"
          disabled={true}
          type="submit"
        >
          Post
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddReview renders correctly renders empty form correctly 1`] = `
<div
  className="add-review"
>
  <form
    action="#"
    className="add-review__form"
    onSubmit={[Function]}
  >
    <div
      className="rating"
    >
      <div
        className="rating__stars"
      >
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-1"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <label
          className="rating__label"
          htmlFor="star-1"
        >
          Rating 1 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-2"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <label
          className="rating__label"
          htmlFor="star-2"
        >
          Rating 2 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-3"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <label
          className="rating__label"
          htmlFor="star-3"
        >
          Rating 3 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-4"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="4"
        />
        <label
          className="rating__label"
          htmlFor="star-4"
        >
          Rating 4 stars
        </label>
        <input
          checked={false}
          className="rating__input"
          disabled={false}
          id="star-5"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="5"
        />
        <label
          className="rating__label"
          htmlFor="star-5"
        >
          Rating 5 stars
        </label>
      </div>
    </div>
    <div
      className="add-review__text"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255, 0.3)",
        }
      }
    >
      <textarea
        className="add-review__textarea"
        disabled={false}
        id="review-text"
        name="review-text"
        onChange={[Function]}
        placeholder="Please write in the range from 50 to 400 characters"
        value=""
      />
      <div
        className="add-review__submit"
      >
        <button
          className="add-review__btn"
          disabled={true}
          type="submit"
        >
          Post
        </button>
      </div>
    </div>
  </form>
</div>
`;
